:bug: Fix whitespace and uppercase in navbar

--- a/leblanc/components/home/Navbar/Navbar.module.css
+++ b/leblanc/components/home/Navbar/Navbar.module.css
@@ -28,7 +28,7 @@
     @apply mx-4;
     & a,
     & button {
-      @apply py-2;
+      @apply py-2 uppercase whitespace-nowrap;
     }
   }
 }
